--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,9 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{secrets.ACTIONS_DEPLOY_KEY}}
-          external_repository: charlesjlee/hugo-github-pages-actions-demo
+          external_repository: daidi06/didier_portfolio
           publish_dir: ./public
-          user_name: Charles Lee
-          user_email: charleslee592@gmail.com
+          user_name: Didier ILBOUDO
+          user_email: ildidier@hotmail.com
           publish_branch: gh-pages
           # cname: ﻿www.charlesjlee.com
